--- a/software/src/omaha/templates/components/omaha-drawer.html
+++ b/software/src/omaha/templates/components/omaha-drawer.html
@@ -18,6 +18,7 @@
     <paper-menu id="menu" selected="{{selected}}">
       <paper-item>Map<iron-icon class="icon" icon="maps:map"></iron-icon></paper-item>
       <paper-item>Admin<iron-icon class="icon" icon="account-circle"></iron-icon></paper-item>
+      <paper-item>Zone Creation</paper-item>
     </paper-menu>
   </template>
   <script>
