--- a/software/src/omaha/templates/components/speaker-controller.html
+++ b/software/src/omaha/templates/components/speaker-controller.html
@@ -10,7 +10,7 @@
 <link rel="import" href="/components/light-controller.html">
 <link rel="import" href="/components/averaging-controller.html">
 <!--<link rel="import" href="/components/map-controller.html">-->
-<dom-module id="audio-controller">
+<dom-module id="speaker-controller">
   <template>
     <style>
      :host {
@@ -102,7 +102,7 @@
   </template>
   <script>
     Polymer({
-      is: 'audio-controller',
+      is: 'speaker-controller',
 
       behaviors: [
         Polymer.NeonAnimatableBehavior
