--- a/software/src/omaha/templates/app.html
+++ b/software/src/omaha/templates/app.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="stylesheet" href="http://openlayers.org/en/v3.10.1/css/ol.css" type="text/css">
-  <script src="http://openlayers.org/en/v3.10.1/build/ol.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="/css/ol.css" type="text/css">
+  <script src="/css/ol.js" type="text/javascript"></script>
   <script src="/bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
   <link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
   <!--<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>-->
