Added a help panel

--- a/software/src/omaha/templates/components/zones/zone-map-controller.html
+++ b/software/src/omaha/templates/components/zones/zone-map-controller.html
@@ -28,7 +28,7 @@
       paper-card {
         padding: 10px;
       }
-      
+
       #zoneBtn {
         background-color: #4285f4;
         color: #fff;
@@ -49,6 +49,7 @@
     <paper-dialog id="dialog">
       <zone-assigner on-zoneupdated="_refreshSpeaker" id="zoneAssigner" speaker="{{selected}}" zones="{{zones}}"></zone-assigner>
     </paper-dialog>
+    <help-panel></help-panel>
   </template>
   <script>
     
