--- a/software/src/omaha/templates/components/open-map-controller.html
+++ b/software/src/omaha/templates/components/open-map-controller.html
@@ -11,7 +11,7 @@
 <link rel="import" href="/bower_components/neon-animation/neon-animation.html">
 
 <link rel="import" href="/components/speaker-icon.html">
-
+<link rel="import" href="/components/help-panel.html">
 <dom-module id="open-map-controller">
   <template>
     <style>
@@ -32,7 +32,6 @@
         margin-top: 5px;
         width: 100%;
       }
-      
       #test {
         margin-left: 10px;
       }
@@ -46,6 +45,7 @@
     <paper-card id="test">
       <div>Status: Broken :(</div>
     </paper-card>
+    <help-panel></help-panel>
   </template>
   <script>
     
